--- a/content/post/data_ecosystem_notes_2022.adoc
+++ b/content/post/data_ecosystem_notes_2022.adoc
@@ -1,6 +1,6 @@
 ---
 draft: true
-title: 'Stretching my Legs in the Analytical Data Ecosystem in 2022'
+title: 'Data Engineering S01E01: Stretching my Legs in the Analytical Data Ecosystem in 2022'
 date: "2022-09-02T10:42:30Z"
 thumbnail: "/images/2022/09/IMG_7557.jpeg"
 image: "/images/2022/09/RemoteMediaFile_6554199_0_2022_07_15_21_21_20.jpeg"
@@ -14,9 +14,10 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
-<!--more-->
 
 For the past 5.5 years I've been head-down in the exciting area of stream processing and events, and I realised recently that the world of data and analytics that I worked in up to 2017 which was changing significantly back then (Big Data, y'all!) has evolved and, dare I say it, matured somewhat - and I've not necessarily kept up with it. In this series of posts you can follow along as I start to reacquaint myself with where it's got to these days.
+
+<!--more-->
 
 ## Background
 
@@ -62,7 +63,7 @@ Analytics work was centralised around the BI (Business Information) or MIS (Mana
 
 ## How It's Going
 
-_First, a HUGE caveat: whereas the above is written based on my experience as a "practitioner" (I was actually doing and building this stuff), what comes next is my _perception_ from conversations, my Twitter bubble, etc. I would be deeply pleased to be corrected on any skew in what I write._
+_First, a HUGE caveat: whereas the above is written based on my experience as a "practitioner" (I was actually doing and building this stuff), what comes next is my_ perception _from conversations, my Twitter bubble, etc. I would be deeply pleased to be corrected on any skew in what I write._
 
 Where to start? 
 
@@ -70,83 +71,36 @@ The use of data has changed. The technology to do so has changed. The general te
 
 Data is no longer used just to print out on a report on a Monday morning. Data is used throughout companies to inform and automate processes, as described by Jay Kreps in his article https://www.confluent.io/blog/every-company-is-becoming-software/[Every Company is Becoming +++<del>+++a+++</del>+++ Software +++<del>+++Company+++</del>+++]. 
 
-Handling of data is done by many teams, not just one. In the new world of the Data Mesh even source system owners get in on the game and publish their data as a data product. Outside of IT, other departments in a company are staffed by a new generation of "technology native" employees - those who grew up with the internet and computers as just as much a part of their worlds as television and the telephone. Rather than commissioning a long project from the IT department they're as likely to self-serve their requirements, either building something themselves or using a credit card to sign up for one of the thousands of SaaS platforms. 
+Handling of data is done by many teams, not just one. In the new world of the Data Mesh even source system owners are supposed to get in on the game and publish their data as a data product. Outside of IT, other departments in a company are staffed by a new generation of "technology native" employees - those who grew up with the internet and computers as just as much a part of their worlds as television and the telephone. Rather than commissioning a long project from the IT department they're as likely to self-serve their requirements, either building something themselves or using a credit card to sign up for one of the thousands of SaaS platforms. 
 
-Hardware is not limited to what you can procure and provision in your data center through a regimented and standardised central process, but whatever you can imagine (and afford) in the Cloud. Laptops themselves are so powerful that much processing can just be done locally. And the fact that it's laptops is notable - now anyone can work anywhere. The desktop machine in the office is becoming an anachronistic idea except for specialised roles such as video processing. 
+Hardware is not limited to what you can procure and provision in your data center through a regimented and standardised central process, but whatever you can imagine (and afford) in the Cloud. Laptops themselves are so powerful that much processing can just be done locally. And the fact that it's laptops is notable - now anyone can work anywhere. The desktop machine in the office is becoming an anachronistic idea except for specialised roles such as video processing. That mobility in its adds considerations to how technology serves us too. 
 
-The world of software has been blown apart, driven in my opinion by the internet, open source, and Cloud. Companies no longer choose between paying IBM for a mainframe license or Microsoft for a Windows licence, but whether to pay at all. Linux went from being a niche geek interest to the foundation on which a huge number of critical systems run. Oracle is still a dominant player in the RDBMS world but you're no longer an oddity if you propose to use Postgres instead. The world of software is at our disposal and just a download link away. With Docker you can spin up and try a dozen data stores in a day and pick the one that suits you best. 
+The world of software has been blown apart, driven in my opinion by the internet, Cloud, and open source.
 
-And speaking of a dozen data stores, nowadays there are stores specialised for every purpose. NoSQL, oldSQL, someSQL, newSQL and everywhere in between. Graph, relational, and document. AWS in particular has leant into this, mirroring what's available to run yourself in their plethora of SaaS offerings in the data space. 
+image::https://archive.org/download/X09-51175/preview.jpg[Microsoft SQL Server 2000 CD] 
 
-The data engineering world has realised, if not fully accepted, that software engineering practices including testing, CI/CD, etc are important - see https://www.youtube.com/watch?v=uixZ7NcGoeE&t=450s[this interesting discussion] on the shift left of data engineering.
+Never mind placing an order for software and waiting for the installation media to arrive. The world of software is at our disposal and just a download link away. With Docker you can spin up and try a dozen data stores in a day and pick the one that suits you best. Cloud gives you the ability to provision capacity on which to run whatever you'd like (IaaS), or as is widely the case provision the software itself (SaaS). They host it, they support it, they tune it - all you do it use it. Companies no longer have to choose simply between paying IBM for a mainframe license or Microsoft for a Windows licence, but whether to pay at all. Linux went from being a niche geek interest to the foundation on which a huge number of critical systems run. Oracle is still a dominant player in the RDBMS world but you're no longer an oddity if you propose to use Postgres instead. 
 
-For the rest of the article I'm going to focus on the software side of things. 
+And speaking of a dozen data stores, nowadays there are stores specialised for every purpose. NoSQL, oldSQL, someSQL, NewSQL and everywhere in between. Graph, relational, and document. AWS in particular has leant into this, mirroring what's available to run yourself in their plethora of SaaS offerings in the data space. 
 
+The data engineering world has realised—if not fully accepted—that software engineering practices including testing, CI/CD, etc are important - see https://www.youtube.com/watch?v=uixZ7NcGoeE&t=450s[this interesting discussion] on the "shift left" of data engineering.
 
-separate articles: 
+In terms of job titles, back in the day you were often a _programmer_, a _datawarehouse specialist_, a _BI analyst_, and all and many titles in between. Nowadays you have people who get the actual value out of the data that pays for all of this to happen, and they might still be called Analysts of one flavour or another but more often Data Scientists. This overlaps and bleeds into the ML world too. For a few years the people who got the data for the analysts to work with were https://medium.com/free-code-camp/the-rise-of-the-data-engineer-91be18f1e603[*Data Engineers*] (modelling the Software Engineers that "programmers" of old had become). It seems to me that this label has split further, with Data Engineering being the discipline of getting the data out of the source, building the pipelines to get it into some kind of staging area (e.g. data lake). From here the https://benn.substack.com/p/why-do-people-want-to-be-analytics[*Analytics Engineers*] take over, cleansing and perhaps restructuring it into a form and schema that is accessible and performant for the required use.
 
-* storage & access
-* query & transformation engines
-* ETL/ELT tools & orchestration
-* Misc
+## Where to Start? 
 
+There is a *lot* to cover, even if I were to just summarise across all of it. There are **seventy seven** **_sub-categeries_** alone in Matt Turck's useful survey of the landscape (http://46eybw2v1nh52oe80d3bi91u-wpengine.netdna-ssl.com/wp-content/uploads/2020/09/2020-Data-and-AI-Landscape-Matt-Turck-at-FirstMark-v1.pdf[pdf] / http://dfkoz.com/ai-data-landscape/[source data] / https://mattturck.com/data2020/[article]) -- and that's from 2 years ago 😅 (lakeFS published something similar for https://lakefs.io/the-state-of-data-engineering-2022/[2022]). 
 
+What I'm going to do is dig into some of the particular areas that have caught my eye, which is generally those closest related to the developments in the specific area of my interest - data engineering for analytics purposes. Even then I'm sure I'll miss a huge swath of relevant content. 
 
-## Back to Basics
+Both https://seattledataguy.substack.com/[SeattleDataGuy] in his article https://seattledataguy.substack.com/p/the-baseline-datastack-going-beyond[The Baseline Data Stack] and https://www.linkedin.com/in/jamesdensmore/[James Densmore] in his book https://www.oreilly.com/library/view/data-pipelines-pocket/9781492087823/[Data Pipelines Pocket Reference] describe a basic approach to moving data into a place from which it can be analysed. Build a pipeline to do a batch extract of data from the source system into a target store from which it can be worked on. No streaming, no fancy tooling - just good ole' ETL. 
 
-Both https://seattledataguy.substack.com/[SeattleDataGuy] in his article https://seattledataguy.substack.com/p/the-baseline-datastack-going-beyond[The Baseline Data Stack] and https://www.linkedin.com/in/jamesdensmore/[James Densmore] in his book https://www.oreilly.com/library/view/data-pipelines-pocket/9781492087823/[Data Pipelines Pocket Reference] describe the basic approach to moving data into a place from which it can be analysed. Build a pipeline to do a batch extract of data from the source system into a target store from which it can be worked on. No streaming, no fancy tooling - just good ole' ETL. 
+But what is the data store? How do you extract, load, and transform the data? These are the things that I am going to dig into in subsequent articles. 
 
-But what is the data store? How do you extract, load, and transform the data? 
+'''
 
-It seems that nowadays you're as likely to be writing code (probably in Python, but maybe Java) as opening up a GUI to build your pipeline. You might be loading data into an RDBMS from which to analyse it but quite often it'll be an object store such as S3, or maybe a cloud datawarehouse like Snowflake. 
-
-A plethora of tools have sprung up to orchestrate these kinds of pipelines, with https://seattledataguy.substack.com/p/should-you-use-apache-airflow[Airflow] a common one. 
-
-## Reference Architectures
-
-Some things change…and some things stay the same. 9 years ago Oracle published their https://www.oracle.com/technetwork/database/bigdata-appliance/overview/bigdatarefarchitecture-2297765.pdf[reference archicture for Information Management and Big Data]. Whilst bits of it haven't aged so well, the core concept of how data is sourced, stored, and served seems to match up almost exactly with Databricks' https://www.databricks.com/glossary/medallion-architecture["Medallion Architecture"]. Which is a good thing - trends come and go but if as an industry we've settled on a common approach then it makes everyone's lives easier!
-
-
-[cols="1,1"]
-|===
-|2013 | 2022 | tl;dr
-
-|`Staging` (or `Raw Data Reservoir`)
-|`Bronze`
-|
-
-|`Foundation`
-|`Silver`
-
-|`Access & Performance` 
-|`Gold`
-|===
-
-
-image::/images/2022/09/databricks_ma_01.png[Extract from Databricks' Medallion Architecture diagram]
-
-image::/images/2022/09/oracle_ra_01.png[Extract from Oracle's Information Management and Big Data Reference Architecture]
-
-See also Oracle's https://www.oracle.com/technetwork/topics/entarch/articles/oea-big-data-guide-1522052.pdf[An Enterprise Architect’s Guide to Big Data - Reference Architecture Overview (March 2016)]
-
-
-## Job Titles
-
-Back in the day, you were often a programmer, a datawarehouse specialist, a BI analyst, and all and many titles in between. 
-
-Nowadays you have people who get the actual value out of the data that pays for all of this to happen, and they might still be called Analysts of one flavour or another but more often Data Scientists. This overlaps and bleeds into the ML world too. 
-
-For a few years the people who got the data for the analysts to work with were https://medium.com/free-code-camp/the-rise-of-the-data-engineer-91be18f1e603[*Data Engineers*] (modelling the Software Engineers that "programmers" of old had become). It seems to me that this label has split further, with Data Engineering being the discipline of getting the data out of the source, building the pipelines to get it into some kind of staging area (e.g. data lake). From here the https://benn.substack.com/p/why-do-people-want-to-be-analytics[*Analytics Engineers*] take over, cleansing and perhaps restructuring it into a form and schema that is accessible and performant for the required use.
-
-
-
-
-## Resources
-
-https://raindrop.io/rmoff/data-engineering-23335742
-
-https://www.getdbt.com/blog/future-of-the-modern-data-stack/[Tristan Handy - The Modern Data Stack: Past, Present, and Future]
-https://medium.com/free-code-camp/the-rise-of-the-data-engineer-91be18f1e603[Maxime Beauchemin - The Rise of the Data Engineer]
-
-Newsletters e.g. Benn Stancil, David J
-
+* link:/2022/09/xxxxx[S01E02: Storage and Access]
+* link:/2022/09/xxxxx[S01E03: Query & Transformation Engines]
+* link:/2022/09/xxxxx[S01E04: ETL/ELT tools & Orchestration]
+* link:/2022/09/xxxxx[S01E05: Architectures & Terminology]
+* link:/2022/09/xxxxx[S01E06: Resources]
